acumos-portal-fe/src/main/webapp/css/styles.css
/* ... */
.filter-container {display: flex;flex-wrap:nowrap;align-items:center;justify-content:flex-start; padding: 10px; margin-top: 8px;background: #f1f1f1;}
.filter-container div {margin-right: 20px;}
.fedcontainer2{background: #f1f1f1; padding: 10px; margin-top: 8px; border-top: 1px solid #E4E4E4; border-bottom: 1px solid #E4E4E4;}
.access-type-sec {width: 18%}
.btn-fedgrid {font-size: 12px; color: #0366d6; font-weight: 600;margin-right: 8px; margin-left: 1px;}
.filter-container div:last-child {display: flex;flex-wrap:nowrap;align-items:center; margin-right:0}
.dialog-btn-container {background:#e5e5e5;}
.filter-container.view-add-sub-popup{justify-content:space-between; padding:10px 0; align-items:flex-end;}
.filter-container.view-add-sub-popup .select-control{padding:0;} 
.filter-container.view-add-sub-popup .fed-container1 button{margin-right:0;}

.admin-select {width: 170px;}
.admin-select md-select {width: 100%; background: #fff; border: 1px solid #d5d5d5}
.fed-search-container {width: 200px;}
.fed-search-container .mdl-textfield.admin-search-container {width: 100% !important;clear:both;padding-left:0;}
.fed-search-container .admin-search-container .admin-search-control {background: #fff; width: 100% !important; height: 30px;border-radius: 4px;}
.admin-img1 {max-width: 150px;}

.fed-view-link {text-overflow: normal; width: 100px; overflow: auto; white-space: normal;}


.logopngContainer{background-color:#F6F3FA;width:100%;margin:5px 0;border: 1px solid #d5d5d5; height:26px;}
.logopngContent{display: inline-block;list-style-type: none;margin: 0;padding: 1px 10px;font-size : 12px;}
.floatLeft{float:left; margin-right:5px;}
.floatRight{float:right}
.closeIcon{float: right; padding-top: 3px !important;margin-right:0px !important;}
.closeIcon .material-icons {font-size: 18px; line-height:10px;}

.admin-change-role-ddl {max-width: 170px !important;min-width: 150px !important;}
.tbl-overflowscroll {overflow-x: scroll !important;}
.disablecursor {cursor: not-allowed;}
.disablecursor  a{pointer-events: none; color: #CCC}

.co-br_logo_wrapper {border:1px solid #d5d5d5; padding: 8px; position: relative; margin: 10px 0;}
.co-br_logo_inner-wrapper {display: flex;flex-wrap:nowrap;align-items: stretch; line-height:35px;}
.co-br_logo_inner-wrapper > div {flex-grow: 1;}
.co-br-logo {min-width: 10px; height: 40px;margin-right: 8px;}
.co-br-logo img {position: relative;max-width: 100%; max-height: 100%;}
.img-lbl-1 {color: #2f2f2f; font-weight: 600;font-size: 13px;display: block;padding-top:4px;}
.btn-cobr-close {border: none; background: none;position: absolute; top: 5px; right:-2px;}
.btn-cobr-close .material-icons {font-size: 16px;}
.co-br_logo_inner-wrapper md-progress-linear .md-container {border-radius: 3px;background: #EFEFEF;}
.row-main {display: flex;flex-wrap:nowrap; justify-content: space-between; align-content: center;}
.row-cell-left {display: flex;flex-wrap:nowrap; justify-content: space-between; align-content: center;}
.row-cell-right .mdl-textfield.admin-search-container input.admin-search-control { width: 200px !important; margin:0 15px 0 0; padding:0 25px 0 5px; height:30px; font-size: 14px; }
.row-cell-left md-checkbox {margin-bottom:0;}
.row-cell-left .md-label > span {line-height:30px;}
.row-cell-left > div {line-height:30px;padding-left:5px;}
.xlarge-size-dialog {width: 850px;}
.modal-search-container {margin-bottom: 20px;}
.model-search-control  {border: 1px solid #d5d5d5;padding:0 5px;height:30px;width: 300px;padding-right: 40px;border-radius: 2px;background: url('../images/sidebar-icons/search_icon.png') no-repeat 98% center !important;}
.fa-times {color: #4f147a; font-size: 1.5em; cursor: pointer;}

/******** Maintained Backup Logs CSS start *****/
.large-size-dialog {width: 680px;}
.small-size-dialog {width: 450px;}
.popup-input-container {display: flex;flex-wrap:nowrap; margin-bottom: 20px; }
.popup-input-container > div:not(:last-child) {margin-right: 10px;}
input[type="text"].medium-textbox {width: 300px;}
.popup-input-container .select-control {width:250px;}
.btn-valign-horizontal {position: relative; top:1px;height:35px;}
.btn-valign-horizontal2 {position: relative; top:1px;}
.popup-input-container md-select {height:31px;}

.items-align-horizontal {flex-direction: row; flex-wrap: nowrap; justify-content: flex-start;}
.items-align-horizontal *:not(:last-child) {margin-right: 10px;}
.vertical-bottom-alignment {align-self: flex-end;}
.margin-left-auto {margin-left: auto;}
.btn-icon-valign-horizontal {height: 33px;padding:0 5px; min-width: 20px;margin-bottom:2px;}
.grid-small-text {font-size: 11px; color:#999;margin-left: 7px;}
.white-overlay {width: 100%; position:absolute; bottom:0; left:0; height: 93%; z-index: 2; background: rgba(255,255,255, 1) url("../images/ajax-loader.gif") no-repeat center center}
.mdl-tabs__tab .tab-maintained_logs {width:25px; height:16px;background: url("../images/admin-dashboard/mbl_inactive.png") no-repeat center center; }
.mdl-tabs__tab.is-active .tab-maintained_logs {background: url("../images/admin-dashboard/mbl_active.png") no-repeat center center; }

/******** Maintained Backup Logs CSS end *****/

/*************Admin User page style End ***************/

/**** Preview box style start ******/
.preview-box {background:#fff; border: 1px solid #671C9D; width: 700px; position:absolute;z-index: 5000; left: -705px; top:0;
	-webkit-box-shadow: 0 0 7px rgba(103,28,157,.6) !important;	-moz-box-shadow: 0 0 7px rgba(103,28,157,.6) !important;box-shadow: 0 0	7px rgba(103,28,157,.6) !important;border-radius: 5px;}
/* ... */

